cluster/steve/podinfo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: steve
  labels:
    istio-injection: enabled
