cluster/steve/podinfo/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: steve
spec:
  hosts:
    - "podinfo.gitops.local"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            port:
              number: 9898
            host: podinfo.demos.svc.cluster.local
